# netty-examples

./: .bazelproject  .bazelrc  WORKSPACE
bazel/: BUILD.bazel  netty_examples_deps.bzl
java/netty-in-action/chapter10/: BUILD.bazel
java/netty-in-action/chapter10/src/main/java/nia/chapter10/: ByteToCharDecoder.java  CharToByteEncoder.java  CombinedByteCharCodec.java  IntegerToStringDecoder.java  IntegerToStringEncoder.java  SafeByteToMessageDecoder.java  ShortToByteEncoder.java  ToIntegerDecoder.java  ToIntegerDecoder2.java  WebSocketConvertHandler.java
java/netty-in-action/chapter10/src/main/java/nia/chapter10/websocket/: MyWebSocketFrame.java  MyWebSocketFrameType.java  WebSocketConvertHandler.java
java/netty-in-action/chapter11/: BUILD.bazel
java/netty-in-action/chapter11/src/main/java/nia/chapter11/: ChunkedWriteHandlerInitializer.java  CmdHandlerInitializer.java  FileRegionWriteHandler.java  HttpAggregatorInitializer.java  HttpCompressionInitializer.java  HttpPipelineInitializer.java  HttpsCodecInitializer.java  IdleStateHandlerInitializer.java  LengthBasedInitializer.java  LineBasedHandlerInitializer.java  MarshallingInitializer.java  SslChannelInitializer.java  WebSocketServerInitializer.java
java/netty-in-action/chapter12/: BUILD.bazel
java/netty-in-action/chapter12/src/main/java/nia/chapter12/: ChatServer.java  ChatServerInitializer.java  HttpRequestHandler.java  SecureChatServer.java  SecureChatServerInitializer.java  TextWebSocketFrameHandler.java
java/netty-in-action/chapter2/client/: BUILD.bazel
java/netty-in-action/chapter2/client/src/main/java/nia/chapter2/echoclient/: EchoClient.java  EchoClientHandler.java
java/netty-in-action/chapter2/server/: BUILD.bazel
java/netty-in-action/chapter2/server/src/main/java/nia/chapter2/echoserver/: EchoServer.java  EchoServerHandler.java
java/netty-in-action/chapter4/: BUILD.bazel
java/netty-in-action/chapter4/src/main/java/nia/chapter4/: ChannelOperationExamples.java  NettyNioServer.java  NettyOioServer.java  PlainNioServer.java  PlainOioServer.java
java/netty-in-action/chapter5/: BUILD.bazel
java/netty-in-action/chapter5/src/main/java/nia.chapter5/: ByteBufExamples.java
java/netty-in-action/chapter6/: BUILD.bazel
java/netty-in-action/chapter6/src/main/java/io/netty/channel/: DummyChannelHandlerContext.java  DummyChannelPipeline.java
java/netty-in-action/chapter6/src/main/java/nia/chapter6/: ChannelFutures.java
java/netty-in-action/chapter7/: BUILD.bazel
java/netty-in-action/chapter7/src/main/java/nia/chapter7/: EventLoopExamples.java
java/netty-in-action/chapter8/: BUILD.bazel
java/netty-in-action/chapter8/src/main/java/nia/chapter8/: BootstrapClient.java  BootstrapClientWithOptionsAndAttrs.java  BootstrapDatagramChannel.java  BootstrapServer.java  BootstrapSharingEventLoopGroup.java  BootstrapWithInitializer.java  GracefulShutdown.java  InvalidBootstrapClient.java
java/netty-in-action/chapter9/: BUILD.bazel
java/netty-in-action/chapter9/src/main/java/nia/chapter9/: AbsIntegerEncoder.java  FixedLengthFrameDecoder.java  FrameChunkDecoder.java
java/netty-in-action/chapter9/src/test/java/nia/test/chapter9/: AbsIntegerEncoderTest.java  Chapter09Tests.java  FixedLengthFrameDecoderTest.java  FrameChunkDecoderTest.java
java/netty-in-action/utils/: BUILD.bazel
java/netty-in-action/utils/src/main/java/nia/util/: BogusKeyStore.java  BogusSslContextFactory.java
java/website/discardserver/: BUILD.bazel
java/website/discardserver/src/main/java/io/netty/tutorial/discardserver/: DiscardServer.java  DiscardServerHandler.java
java/website/echoserver/: BUILD.bazel
java/website/echoserver/src/main/java/io/netty/tutorial/echoserver/: EchoServer.java  EchoServerHandler.java
java/website/pojotimeclient/: BUILD.bazel
java/website/pojotimeclient/src/main/java/io/netty/tutorial/timepojoclient/: TimeClient.java  TimeClientHandler.java  TimeDecoder.java  UnixTime.java
java/website/pojotimeserver/: BUILD.bazel
java/website/pojotimeserver/src/main/java/io/netty/tutorial/timepojoserver/: TimeEncoder.java  TimeServer.java  TimeServerHandler.java  UnixTime.java
java/website/receiveddata/: BUILD.bazel
java/website/receiveddata/src/main/java/io/netty/tutorial/receiveddata/: ReceivedData.java  ReceivedDataHandler.java
java/website/timeclient/: BUILD.bazel
java/website/timeclient/src/main/java/io/netty/tutorial/timeclient/: TimeClient.java  TimeClientHandler.java  TimeDecoder.java
java/website/timeserver/: BUILD.bazel
java/website/timeserver/src/main/java/io/netty/tutorial/timeserver/: TimeServer.java  TimeServerHandler.java
