package(default_visibility = ["//visibility:public"])

java_library(
    name = "chapter10",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "@maven//:io_netty_netty_buffer",
        "@maven//:io_netty_netty_codec",
        "@maven//:io_netty_netty_codec_http",
        "@maven//:io_netty_netty_common",
        "@maven//:io_netty_netty_transport",
    ],
)
