package(default_visibility = ["//visibility:public"])

java_binary(
    name = "chapter12",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "nia.chapter12.ChatServer",
    resources = glob(["src/main/resources/*.*"]),
    deps = [
        "@maven//:io_netty_netty_buffer",
        "@maven//:io_netty_netty_codec",
        "@maven//:io_netty_netty_codec_http",
        "@maven//:io_netty_netty_common",
        "@maven//:io_netty_netty_handler",
        "@maven//:io_netty_netty_transport",
    ],
)
