package(default_visibility = ["//visibility:public"])

java_library(
    name = "utils",
    srcs = glob(["src/main/java/**/*.java"]),
    exports = [
        "@maven//:io_netty_netty_buffer",
        "@maven//:io_netty_netty_codec",
        "@maven//:io_netty_netty_transport",
    ],
    deps = [
        "@maven//:io_netty_netty_buffer",
        "@maven//:io_netty_netty_codec",
        "@maven//:io_netty_netty_transport",
    ],
)
