package(default_visibility = ["//visibility:public"])

java_binary(
    name = "client",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "nia.chapter2.echoclient.EchoClient",
    deps = [
        "@maven//:io_netty_netty_buffer",
        "@maven//:io_netty_netty_codec",
        "@maven//:io_netty_netty_common",
        "@maven//:io_netty_netty_transport",
    ],
)
